--- a/FootballMVC/Views/CompetitionApi/Index.cshtml
+++ b/FootballMVC/Views/CompetitionApi/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FootballMVC.Models.Entities.Country>
+﻿@model IEnumerable<FootballMVC.Models.Entities.Competition>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CountryId)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -28,8 +31,8 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>            
-                <a asp-action="CountryLeags" asp-route-id="@item.Id">CountryLeags</a> |
+            <td>
+                @Html.DisplayFor(modelItem => item.CountryId)
             </td>
         </tr>
         }
