--- a/FootballMVC/Views/CountryApi/CountryLeags.cshtml
+++ b/FootballMVC/Views/CountryApi/CountryLeags.cshtml
@@ -1,7 +1,7 @@
-﻿@model IEnumerable<FootballMVC.Models.Entities.Country>
+﻿@model IEnumerable<FootballMVC.Models.Entities.Competition>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "CountryLeags";
 }
 
 <h1>Index</h1>
@@ -14,6 +14,9 @@
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.CountryId)
             </th>
             <th></th>
         </tr>
@@ -28,10 +31,18 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>            
-                <a asp-action="CountryLeags" asp-route-id="@item.Id">CountryLeags</a> |
+            <td>
+                @Html.DisplayFor(modelItem => item.CountryId)
+            </td>
+            <td>
+                <a asp-controller="TeamApi" asp-action="ViewTemsByLeagID" asp-route-id="@item.Id">Команди</a>
             </td>
         </tr>
+
+          
         }
     </tbody>
 </table>
+<div>
+    <a asp-action="Index">Back to List</a>
+</div>
