--- a/FootballMVC/Views/Shared/_Layout.cshtml
+++ b/FootballMVC/Views/Shared/_Layout.cshtml
@@ -13,7 +13,10 @@
             <div class="container">
                 <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FootballMVC</a>
                 <a class="navbar-brand" asp-area="" asp-controller="PlayerApi" asp-action="Index">Гравець</a>
-                <a class="navbar-brand" asp-area="" asp-controller="CountryApi" asp-action="Index">Країна</a>
+                <a class="navbar-brand" asp-area="" asp-controller="CountryApi" asp-action="Index">Країни</a>
+                <a class="navbar-brand" asp-area="" asp-controller="TeamApi" asp-action="Index">Команди</a>
+                <a class="navbar-brand" asp-area="" asp-controller="CompetitionApi" asp-action="Index">Чемпіонати</a>
+                <a class="navbar-brand" asp-area="" asp-controller="StandingApi" asp-action="Index">Результати</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
