--- a/FootballMVC/Views/TeamApi/Index.cshtml
+++ b/FootballMVC/Views/TeamApi/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<FootballMVC.Models.Entities.Country>
+﻿@model IEnumerable<FootballMVC.Models.Entities.Team>
 
 @{
     ViewData["Title"] = "Index";
@@ -15,6 +15,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Players)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -28,10 +31,14 @@
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>            
-                <a asp-action="CountryLeags" asp-route-id="@item.Id">CountryLeags</a> |
-            </td>
+            @*<td>
+                @Html.DisplayFor(modelItem => item.Players.Count())
+            </td>*@
+        <td>
+            <a asp-controller="TeamApi" asp-action="ViewAllPlayers">Список гравців</a> |
+        </td>
         </tr>
         }
+ 
     </tbody>
 </table>
