--- a/FootballMVC/Views/TeamApi/ViewTemsByLeagID.cshtml
+++ b/FootballMVC/Views/TeamApi/ViewTemsByLeagID.cshtml
@@ -1,10 +1,11 @@
-﻿@model IEnumerable<FootballMVC.Models.Entities.Country>
+﻿
+@model IEnumerable<FootballMVC.Models.Entities.Team>
 
 @{
-    ViewData["Title"] = "Index";
+    ViewData["Title"] = "ViewTemsByLeagID";
 }
 
-<h1>Index</h1>
+<h1>ViewTemsByLeagID</h1>
 
 <table class="table">
     <thead>
@@ -15,6 +16,9 @@
             <th>
                 @Html.DisplayNameFor(model => model.Name)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Players)
+            </th>
             <th></th>
         </tr>
     </thead>
@@ -24,14 +28,16 @@
         <tr>
             <td>
                 @Html.DisplayFor(modelItem => item.Id)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Name)
             </td>
-            <td>            
-                <a asp-action="CountryLeags" asp-route-id="@item.Id">CountryLeags</a> |
+            <td>
+                <a asp-controller="TeamApi" asp-action="ViewPlayersByTeamId" asp-route-id="@item.Id">Список Гравців</a>
             </td>
         </tr>
         }
     </tbody>
 </table>
+<div>
+    <a asp-action="CountryLeags">Back to List</a>
+</div>
