--- a/FootballMVC/Views/Standings/Index.cshtml
+++ b/FootballMVC/Views/Standings/Index.cshtml
@@ -6,17 +6,20 @@
 
 <h1>Index</h1>
 
+<p>
+    <a asp-action="Create">Create New</a>
+</p>
 <table class="table">
     <thead>
         <tr>
-            @*<th>
-            @Html.DisplayNameFor(model => model.Competition_Id)
-        </th>*@
             <th>
-                @Html.DisplayNameFor(model => model.LeaguePosition)
+                @Html.DisplayNameFor(model => model.Team_id)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.Team_Name)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.LeaguePosition)
             </th>
             <th>
                 @Html.DisplayNameFor(model => model.League_payed)
@@ -37,17 +40,16 @@
         </tr>
     </thead>
     <tbody>
-        @foreach (var item in Model)
-        {
+@foreach (var item in Model) {
         <tr>
-            @*<td>
-            @Html.DisplayFor(modelItem => item.Competition_Id)
-        </td>*@
             <td>
-                @Html.DisplayFor(modelItem => item.LeaguePosition)
+                @Html.DisplayFor(modelItem => item.Team_id)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Team_Name)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.LeaguePosition)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.League_payed)
@@ -64,7 +66,12 @@
             <td>
                 @Html.DisplayFor(modelItem => item.League_PTS)
             </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Competition_Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Competition_Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Competition_Id">Delete</a>
+            </td>
         </tr>
-        }
+}
     </tbody>
 </table>
