--- a/FootballMVC/Views/Home/Index.cshtml
+++ b/FootballMVC/Views/Home/Index.cshtml
@@ -2,7 +2,44 @@
     ViewData["Title"] = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+    <div class="text-center">
+        <h1 class="display-4">Робота з базою даних</h1>
+        <p>
+            <a asp-controller="Players" asp-action="Index">Гравці</a>
+        </p>
+        <p>
+            <a asp-controller="Countries" asp-action="Index">Країни</a>
+        </p>
+        <p>
+            <a asp-controller="Competitions" asp-action="Index">Чемпіонати</a>
+        </p>
+        <p>
+            <a asp-controller="Standings" asp-action="Index">Результати</a>
+        </p>
+        <p>
+            <a asp-controller="Teams" asp-action="Index">Команди</a>
+        </p>
+
+        <h1 class="display-4">Робота з API</h1>
+  
+        <p>
+            <a asp-controller="PlayerApi" asp-action="Index">Гравці</a>
+        </p>
+        <p>
+            <a asp-controller="CountryApi" asp-action="Index">Країни</a>
+        </p>
+        <p>
+            <a asp-controller="CompetitionApi" asp-action="Index">Чемпіонати</a>
+        </p>
+        <p>
+            <a asp-controller="StandingApi" asp-action="Index">Результати</a>
+        </p>
+        <p>
+            <a asp-controller="TeamApi" asp-action="Index">Команди</a>
+        </p>
+
+
+
+
+
+    </div>
