--- a/FootballMVC/Views/Shared/_Layout.cshtml
+++ b/FootballMVC/Views/Shared/_Layout.cshtml
@@ -11,12 +11,8 @@
     <header>
         <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
             <div class="container">
-                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">FootballMVC</a>
-                <a class="navbar-brand" asp-area="" asp-controller="PlayerApi" asp-action="Index">Гравець</a>
-                <a class="navbar-brand" asp-area="" asp-controller="CountryApi" asp-action="Index">Країни</a>
-                <a class="navbar-brand" asp-area="" asp-controller="TeamApi" asp-action="Index">Команди</a>
-                <a class="navbar-brand" asp-area="" asp-controller="CompetitionApi" asp-action="Index">Чемпіонати</a>
-                <a class="navbar-brand" asp-area="" asp-controller="StandingApi" asp-action="Index">Результати</a>
+                <a class="navbar-brand" asp-area="" asp-controller="Home" asp-action="Index">Головна сторінка</a> 
+                <a class="navbar-brand" asp-area="" asp-controller="CountryApi" asp-action="Index">Довідка</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target=".navbar-collapse" aria-controls="navbarSupportedContent"
                         aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
