--- a/FootballMVC/Views/PlayerApi/Index.cshtml
+++ b/FootballMVC/Views/PlayerApi/Index.cshtml
@@ -82,7 +82,10 @@
             <td>
                 @Html.DisplayFor(modelItem => item.TeamId)
             </td>
-
+            <td>
+            <td>
+                <a asp-controller="Players" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
+            </td>
         </tr>
         }
     </tbody>
