--- a/FootballMVC/Views/Home/Index.cshtml
+++ b/FootballMVC/Views/Home/Index.cshtml
@@ -3,6 +3,16 @@
 }
 
     <div class="text-center">
+        <h1 class="display-4">Робота з API</h1>
+        <p>
+            <a asp-controller="PlayerApi" asp-action="Index">Кріштіано Роналдо</a>
+        </p>
+        <p>
+            <a asp-controller="StandingApi" asp-action="Index">Турнірна таблиця АПЛ</a>
+        </p>
+        <p>
+            <a asp-controller="CountryApi" asp-action="Index"> Довідник</a>
+        </p>
         <h1 class="display-4">Робота з базою даних</h1>
         <p>
             <a asp-controller="Players" asp-action="Index">Гравці</a>
@@ -19,27 +29,4 @@
         <p>
             <a asp-controller="Teams" asp-action="Index">Команди</a>
         </p>
-
-        <h1 class="display-4">Робота з API</h1>
-  
-        <p>
-            <a asp-controller="PlayerApi" asp-action="Index">Гравці</a>
-        </p>
-        <p>
-            <a asp-controller="CountryApi" asp-action="Index">Країни</a>
-        </p>
-        <p>
-            <a asp-controller="CompetitionApi" asp-action="Index">Чемпіонати</a>
-        </p>
-        <p>
-            <a asp-controller="StandingApi" asp-action="Index">Результати</a>
-        </p>
-        <p>
-            <a asp-controller="TeamApi" asp-action="Index">Команди</a>
-        </p>
-
-
-
-
-
     </div>
