--- a/FootballMVC/Views/PlayerApi/Index.cshtml
+++ b/FootballMVC/Views/PlayerApi/Index.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Кріштіано Роналду</h1>
 
 <table class="table">
     <thead>
@@ -83,9 +83,6 @@
                 @Html.DisplayFor(modelItem => item.TeamId)
             </td>
             <td>
-            <td>
-                <a asp-controller="Players" asp-action="Edit" asp-route-id="@item.Id">Edit</a> 
-            </td>
         </tr>
         }
     </tbody>
