--- a/FootballMVC/Views/CompetitionApi/SaveToDateBase.cshtml
+++ b/FootballMVC/Views/CompetitionApi/SaveToDateBase.cshtml
@@ -1,7 +1,17 @@
-﻿
+﻿@model FootballMVC.Models.Entities.Competition
 @{
     ViewData["Title"] = "SaveToDateBase";
 }
-
-<h1>SaveToDateBase</h1>
-
+@{
+    if (Model != null)
+    {
+        <h1>Турнір вже був збережений в базі даних</h1>
+    }
+    else
+    {
+        <h1>Збережено</h1>
+    }
+}
+<div>
+    <a asp-controller="CompetitionApi" asp-action="CountryLeags" asp-route-id="@Model.CountryId">Назад</a>
+</div>
