--- a/FootballMVC/Views/CountryApi/Index.cshtml
+++ b/FootballMVC/Views/CountryApi/Index.cshtml
@@ -4,8 +4,9 @@
     ViewData["Title"] = "Index";
 }
 
-<h1>Index</h1>
+<h1>Список країн</h1>
 
+<a asp-action="SaveAllToDateBase">Зберегти всі країни</a>
 <table class="table">
     <thead>
         <tr>
@@ -29,13 +30,13 @@
                     @Html.DisplayFor(modelItem => item.Name)
                 </td>
                 <td>
-                    <a asp-controller="CompetitionApi" asp-action="CountryLeags" asp-route-id="@item.Id">CountryLeags</a>
+                    <a asp-controller="CompetitionApi" asp-action="CountryLeags" asp-route-id="@item.Id">Турніри</a>
                 </td>
                 <td>
-                    <a asp-action="SaveToDateBase" asp-route-id="@item.Id">SaveToDateBase</a>
+                    <a asp-action="SaveToDateBase" asp-route-id="@item.Id">Зберегти</a>
                 </td>
             </tr>
         }
     </tbody>
 </table>
-<a asp-action="SaveAllToDateBase">Зберегти всі країни</a>
+
