Збереження команд та турнірних таблиць в базу даних

--- a/FootballMVC/Views/CompetitionApi/CountryLeags.cshtml
+++ b/FootballMVC/Views/CompetitionApi/CountryLeags.cshtml
@@ -36,7 +36,7 @@
                     @Html.DisplayFor(modelItem => item.CountryId)
                 </td>
                 <td>
-                    <a asp-controller="TeamApi" asp-action="ViewStandingByLeagID" asp-route-id="@item.Id">Турнірна таблиця</a>
+                    <a asp-controller="StandingApi" asp-action="ViewStandingByLeagID" asp-route-id="@item.Id">Турнірна таблиця</a>
                 <td>
                 </td>
                 <td>
