--- a/FootballMVC/Views/CompetitionApi/SaveToDateBase.cshtml
+++ b/FootballMVC/Views/CompetitionApi/SaveToDateBase.cshtml
@@ -12,6 +12,6 @@
         <h1>Збережено</h1>
     }
 }
-<div>
+@*<div>
     <a asp-controller="CompetitionApi" asp-action="CountryLeags" asp-route-id="@Model.CountryId">Назад</a>
-</div>
+</div>*@
