--- a/FootballMVC/Views/Standings/Index.cshtml
+++ b/FootballMVC/Views/Standings/Index.cshtml
@@ -13,9 +13,6 @@
     <thead>
         <tr>
             <th>
-                @Html.DisplayNameFor(model => model.Team_id)
-            </th>
-            <th>
                 @Html.DisplayNameFor(model => model.Team_Name)
             </th>
             <th>
@@ -36,15 +33,18 @@
             <th>
                 @Html.DisplayNameFor(model => model.League_PTS)
             </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Competition_Id)
+            </th>
+            <th>
+                @Html.DisplayNameFor(model => model.Team_id)
+            </th>
             <th></th>
         </tr>
     </thead>
     <tbody>
 @foreach (var item in Model) {
         <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.Team_id)
-            </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Team_Name)
             </td>
@@ -67,9 +67,15 @@
                 @Html.DisplayFor(modelItem => item.League_PTS)
             </td>
             <td>
-                <a asp-action="Edit" asp-route-id="@item.Competition_Id">Edit</a> |
-                <a asp-action="Details" asp-route-id="@item.Competition_Id">Details</a> |
-                <a asp-action="Delete" asp-route-id="@item.Competition_Id">Delete</a>
+                @Html.DisplayFor(modelItem => item.Competition_Id)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Team_id)
+            </td>
+            <td>
+                <a asp-action="Edit" asp-route-id="@item.Id">Edit</a> |
+                <a asp-action="Details" asp-route-id="@item.Id">Details</a> |
+                <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
             </td>
         </tr>
 }
