--- a/FootballMVC/Views/Standings/Delete.cshtml
+++ b/FootballMVC/Views/Standings/Delete.cshtml
@@ -12,12 +12,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Team_id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Team_id)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Team_Name)
         </dt>
         <dd class = "col-sm-10">
@@ -59,10 +53,22 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.League_PTS)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Competition_Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Competition_Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Team_id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Team_id)
+        </dd>
     </dl>
     
     <form asp-action="Delete">
-        <input type="hidden" asp-for="Competition_Id" />
+        <input type="hidden" asp-for="Id" />
         <input type="submit" value="Delete" class="btn btn-danger" /> |
         <a asp-action="Index">Back to List</a>
     </form>
