--- a/FootballMVC/Views/Standings/Details.cshtml
+++ b/FootballMVC/Views/Standings/Details.cshtml
@@ -11,12 +11,6 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.Team_id)
-        </dt>
-        <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.Team_id)
-        </dd>
-        <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Team_Name)
         </dt>
         <dd class = "col-sm-10">
@@ -58,9 +52,21 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.League_PTS)
         </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Competition_Id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Competition_Id)
+        </dd>
+        <dt class = "col-sm-2">
+            @Html.DisplayNameFor(model => model.Team_id)
+        </dt>
+        <dd class = "col-sm-10">
+            @Html.DisplayFor(model => model.Team_id)
+        </dd>
     </dl>
 </div>
 <div>
-    <a asp-action="Edit" asp-route-id="@Model.Competition_Id">Edit</a> |
+    <a asp-action="Edit" asp-route-id="@Model.Id">Edit</a> |
     <a asp-action="Index">Back to List</a>
 </div>
