--- a/FootballMVC/Views/CompetitionApi/SaveToDateBase.cshtml
+++ b/FootballMVC/Views/CompetitionApi/SaveToDateBase.cshtml
@@ -2,16 +2,10 @@
 @{
     ViewData["Title"] = "SaveToDateBase";
 }
-@{
-    if (Model != null)
-    {
-        <h1>Турнір вже був збережений в базі даних</h1>
-    }
-    else
-    {
-        <h1>Збережено</h1>
-    }
-}
-@*<div>
-    <a asp-controller="CompetitionApi" asp-action="CountryLeags" asp-route-id="@Model.CountryId">Назад</a>
-</div>*@
+
+<h1>@ViewData["Answer"]</h1>
+
+<div>
+    <a asp-action="CountryLeags" asp-route-id="@Model.CountryId">Назад</a>
+</div>
+
