--- a/FootballMVC/Views/CountryApi/SaveAllToDateBase.cshtml
+++ b/FootballMVC/Views/CountryApi/SaveAllToDateBase.cshtml
@@ -3,7 +3,7 @@
     ViewData["Title"] = "SaveAllToDateBase";
 }
 
-<h1>Всі країни збережені в базі даних</h1>
+    <h1>@ViewData["Answer"]</h1>
 
 <div>
     <a asp-action="Index">Back to List</a>
