--- a/FootballMVC/Views/CountryApi/SaveToDateBase.cshtml
+++ b/FootballMVC/Views/CountryApi/SaveToDateBase.cshtml
@@ -1,19 +1,11 @@
-﻿@model FootballMVC.Models.Entities.Country
-@{
+﻿@{
     ViewData["Title"] = "SaveToDateBase";
 }
 
-@{
-        if (Model != null)
-        {
-            <h1>Країна вже була збережена в базі даних</h1>
-        }
-        else
-        {
-            <h1>Збережено</h1>
-        }
-}
- 
-<div>
-    <a asp-action="Index">Назад</a>
-</div>
+
+
+ <h1>@ViewData["Answer"]</h1>
+
+    <div>
+        <a asp-action="Index">Назад</a>
+    </div>
