--- a/FootballMVC/Views/StandingApi/ViewStandingByLeagID.cshtml
+++ b/FootballMVC/Views/StandingApi/ViewStandingByLeagID.cshtml
@@ -4,10 +4,9 @@
     ViewData["Title"] = "ViewStandingByLeagID";
 }
 
-<h1>ViewStandingByLeagID</h1>
+<h1>Турнірна таблиця </h1>
 
-<a asp-action="SaveAllToDateBase">Зберегти всі команди</a>
-
+<a asp-action="SaveAllToDateBase" asp-route-id="@Model.FirstOrDefault().Competition_Id">Зберегти турнірну таблицю</a>
 <table class="table">
     <thead>
         <tr>
@@ -70,6 +69,3 @@
         }
     </tbody>
 </table>
-<div>
-    <a asp-action="CountryLeags">Back to List</a>
-</div>
