--- a/FootballMVC/Views/TeamApi/SaveToDateBase.cshtml
+++ b/FootballMVC/Views/TeamApi/SaveToDateBase.cshtml
@@ -1,17 +1,9 @@
-﻿@model FootballMVC.Models.Entities.Team
+﻿
 @{
     ViewData["Title"] = "SaveToDateBase";
 }
-@{
-    if (Model != null)
-    {
-        <h1>Команда вже був збережена в базі даних</h1>
-    }
-    else
-    {
-        <h1>Збережено</h1>
-    }
-}
+    <h1>@ViewData["Answer"]</h1>
+
 <div>
-    <a asp-controller="TeamApi" asp-action="ViewTemsByLeagID" asp-route-id="@Model.Id">Назад</a>
+        <a asp-controller="TeamApi" asp-action="ViewTemsByLeagID" asp-route-id=@ViewBag.Id>Назад</a>
 </div>
