--- a/FootballMVC/Views/Home/Index.cshtml
+++ b/FootballMVC/Views/Home/Index.cshtml
@@ -2,31 +2,34 @@
     ViewData["Title"] = "Home Page";
 }
 
-    <div class="text-center">
-        <h1 class="display-4">Робота з API</h1>
-        <p>
-            <a asp-controller="PlayerApi" asp-action="Index">Кріштіано Роналдо</a>
-        </p>
-        <p>
-            <a asp-controller="StandingApi" asp-action="Index">Турнірна таблиця АПЛ</a>
-        </p>
-        <p>
-            <a asp-controller="CountryApi" asp-action="Index"> Довідник</a>
-        </p>
-        <h1 class="display-4">Робота з базою даних</h1>
-        <p>
-            <a asp-controller="Players" asp-action="Index">Гравці</a>
-        </p>
-        <p>
-            <a asp-controller="Countries" asp-action="Index">Країни</a>
-        </p>
-        <p>
-            <a asp-controller="Competitions" asp-action="Index">Чемпіонати</a>
-        </p>
-        <p>
-            <a asp-controller="Standings" asp-action="Index">Результати</a>
-        </p>
-        <p>
-            <a asp-controller="Teams" asp-action="Index">Команди</a>
-        </p>
-    </div>
+<div class="text-center">
+    <h1 class="display-4">Робота з API</h1>
+    <p>
+        <a asp-controller="EventApi" asp-action="Index">Тест евент</a>
+    </p>
+    <p>
+        <a asp-controller="PlayerApi" asp-action="Index">Кріштіано Роналдо</a>
+    </p>
+    <p>
+        <a asp-controller="StandingApi" asp-action="Index">Турнірна таблиця АПЛ</a>
+    </p>
+    <p>
+        <a asp-controller="CountryApi" asp-action="Index"> Довідник</a>
+    </p>
+    <h1 class="display-4">Робота з базою даних</h1>
+    <p>
+        <a asp-controller="Players" asp-action="Index">Гравці</a>
+    </p>
+    <p>
+        <a asp-controller="Countries" asp-action="Index">Країни</a>
+    </p>
+    <p>
+        <a asp-controller="Competitions" asp-action="Index">Чемпіонати</a>
+    </p>
+    <p>
+        <a asp-controller="Standings" asp-action="Index">Результати</a>
+    </p>
+    <p>
+        <a asp-controller="Teams" asp-action="Index">Команди</a>
+    </p>
+</div>
